Swagger (#6)
* refactor(validation): changed auth validation values

* chore(deps): added cors package

* feat(swagger): added swagger UI for auth #7

* fix(cors): fixed cors origin

* fix(auth): fixed auth logic

* feat(auth): implemented password restoring

* fix(prettier): added prettier config
