# src/controllers/authentication.ts
@@ -9,7 +9,7 @@ dotenv.config();
 
 const MAX_AGE = 30 * 24 * 60 * 60 * 1000;
 
-const validateEmail = (req: Request): void => {
+const validate = (req: Request): void => {
   const errors = validationResult(req);
 
   if (!errors.isEmpty()) {
@@ -24,7 +24,7 @@ class Authentication {
     next: NextFunction
   ): Promise<void> {
     try {
-      validateEmail(req);
+      validate(req);
 
       const user = await authService.createUser(req.body);
 
@@ -34,15 +34,20 @@ class Authentication {
     }
   }
 
-  async login(req: Request, res: Response, next: NextFunction): Promise<void> {
+  async login(
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ): Promise<void> {
     try {
-      validateEmail(req);
+      validate(req);
 
       const user = await authService.login(req.body);
 
       await authService.deleteTokensByUser(user.id);
 
-      const tokens: ITokens = await authService.createTokens(req.body, user.id);
+      const tokens: ITokens =
+        await authService.createTokens(req.body, user.id);
 
       res.cookie("refreshToken", tokens.refreshToken, {
         maxAge: MAX_AGE,
@@ -51,17 +56,63 @@ class Authentication {
 
       const { accessToken, refreshToken } = tokens;
 
-      res.json({ user, tokens: { accessToken, refreshToken } });
+      res.json({
+        user,
+        tokens: { accessToken, refreshToken },
+      });
     } catch (e) {
       next(e);
     }
   }
 
-  async logout(req: Request, res: Response, next: NextFunction): Promise<void> {
+  async logout(
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ): Promise<void> {
     try {
       const { refreshToken } = req.cookies;
       await authService.logout(refreshToken);
       res.clearCookie("refreshToken");
+      return res.end();
+    } catch (e) {
+      next(e);
+    }
+  }
+
+  async restore(
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ): Promise<void> {
+    try {
+      validate(req);
+      const { email } = req.body;
+
+      await authService.restore(email);
+
+      return res.end();
+    } catch (e) {
+      next(e);
+    }
+  }
+
+  async createNewPassword(
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ): Promise<void> {
+    try {
+      validate(req);
+      const { resetToken, password, passwordConfirmation } =
+        req.body;
+
+      await authService.createNewPassword(
+        resetToken,
+        password,
+        passwordConfirmation
+      );
+
       return res.end();
     } catch (e) {
       next(e);
@@ -89,12 +140,17 @@ class Authentication {
     try {
       const { refreshToken } = req.cookies;
 
-      await authService.verifyToken(refreshToken, "refresh");
+      await authService.verifyToken(
+        refreshToken,
+        "refresh"
+      );
       const user = await authService.refresh(refreshToken);
 
-      const tokens: ITokens = await authService.createTokens(req.body, user.id);
+      const tokens: ITokens =
+        await authService.createTokens(req.body, user.id);
 
-      const { accessToken, refreshToken: newRefreshToken } = tokens;
+      const { accessToken, refreshToken: newRefreshToken } =
+        tokens;
 
       res.cookie("refreshToken", tokens.refreshToken, {
         maxAge: MAX_AGE,
@@ -109,7 +165,11 @@ class Authentication {
     }
   }
 
-  checkAccess(_req: Request, res: Response, next: NextFunction): void {
+  checkAccess(
+    _req: Request,
+    res: Response,
+    next: NextFunction
+  ): void {
     try {
       res.json({
         access: true,
